@@ -10,6 +10,7 @@
 *** Deprecated
 *** Removed
 *** Fixed
++ *TAT.hpp*: Fix a bug in windows platform when copying an edge with fermi symmetry.
 
 ** [[https://github.com/hzhangxyz/TAT/compare/v0.2.18...v0.2.19][v0.2.19]] - 2022-07-13
 
